styles/Home.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 6rem;
  min-height: 100vh;
  background-color: #F4F4F4;
  font-family: monospace;
}

.markdown-container a {
  color: #0066FF;
}

/* Tablet and Smaller Desktop */
@media (max-width: 1120px) {
  .main {
    padding: 2rem;
  }
  .grid {
    grid-template-columns: repeat(2, 50%);
  }
}

@media (prefers-color-scheme: dark) {
  .main {
      background-color: #161616;
    }
  .markdown-container a {
      color: #78a9ff;
    }
  .logo {
    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
  }
}

